--- a/assets/components/footer.html
+++ b/assets/components/footer.html
@@ -1,3 +1,8 @@
+    <!-- 
+    푸터 따로 분리함
+    js/main.js이 불러옴 호출방법은 <div id="footer-placeholder"></div>
+    -->
+
     <footer class="footer">
         <div class="container">
             <div class="row gy-4">
@@ -24,7 +29,7 @@
 
                     <ul class="list-inline mb-0 small">
                         <li class="list-inline-item">
-                            <a href="privacy.html" class="text-decoration-none">Privacy Policy</a>
+                            <a href="/privacy.html" class="text-decoration-none">Privacy Policy</a>
                         </li>
                         <li class="list-inline-item">|</li>
                         <li class="list-inline-item">All Rights Reserved.</li>
